@@ -17,9 +17,10 @@ import com.webforj.router.annotation.Route;
 @Route
 @FrameTitle("Tip Calculator")
 public class MaskedNumberFieldView extends Composite<FlexLayout> {
-  FlexLayout self = getBoundComponent();
-  MaskedNumberField billAmountField = new MaskedNumberField("Bill Amount");
-  MaskedNumberField tipPercentageField = new MaskedNumberField("Tip Percentage (%)");
+  // self field enables fluent method chaining from the bound component
+  private final FlexLayout self = getBoundComponent();
+  private final MaskedNumberField billAmountField = new MaskedNumberField("Bill Amount");
+  private final MaskedNumberField tipPercentageField = new MaskedNumberField("Tip Percentage (%)");
 
   public MaskedNumberFieldView() {
     self.setDirection(FlexDirection.COLUMN)
@@ -27,13 +28,11 @@ public class MaskedNumberFieldView extends Composite<FlexLayout> {
         .setAlignment(FlexAlignment.CENTER)
         .setMargin("var(--dwc-space-m)");
 
-    billAmountField
-        .setMask("$######.##")
+    billAmountField.setMask("$######.##")
         .setValue(300d)
         .setWidth(250)
         .setPrefixComponent(TablerIcon.create("file-invoice"));
-    tipPercentageField
-        .setMask("###%")
+    tipPercentageField.setMask("###%")
         .setValue(15d)
         .setWidth(250)
         .setPrefixComponent(TablerIcon.create("circle-percentage"));
@@ -68,8 +67,7 @@ public class MaskedNumberFieldView extends Composite<FlexLayout> {
       double tipAmount = billAmount * (tipPercentage / 100);
       double totalAmount = billAmount + tipAmount;
 
-      Toast.show("Tip: $" + String.format("%.2f", tipAmount)
-          + "\nTotal: $" + String.format("%.2f", totalAmount), Theme.GRAY);
+      Toast.show("Tip: $%.2f\nTotal: $%.2f".formatted(tipAmount, totalAmount), Theme.GRAY);
     } catch (NumberFormatException e) {
       Toast.show("Please enter valid numbers.", Theme.DANGER);
     }
